# rustbag

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  versions.json
.ci/: docs-requirements.txt  gen_ref_pages.py
.github/workflows/: build_docs_release.yml  build_publish_pip.yml
.github/workflows-old/: build_publish_pip.yml
0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
0.1.3/getting_started/: index.html
0.1.3/license/: index.html
0.1.3/performance/: index.html
0.1.3/reference/SUMMARY/: index.html
0.1.3/reference/rustbag/: index.html
0.1.3/reference/rustbag/rustbag/: index.html
0.1.3/roadmap/: index.html
0.1.3/search/: search_index.json
benchmarks/: README.md  check_rosbags.py  docker-compose.yaml  environment.yaml  requirements.txt
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/rosbags_rs/: __init__.py  rosbags_rs.pyi
crates/python/rustbag/: __init__.py  rustbag.pyi
crates/python/src/: bag.rs  lib.rs  msg_iter.rs
crates/ros_message/: Cargo.toml
crates/ros_message/src/: dynamic_msg.rs  lib.rs  rosmsg.rs
crates/ros_msg/: Cargo.toml
crates/ros_msg/src/: const_field.rs  data_type.rs  field.rs  lib.rs  msg.rs  msg_type.rs  msg_value.rs  parse_msg.rs  traits.rs
crates/rosbags/: Cargo.toml
crates/rosbags-lib/: Cargo.toml
crates/rosbags-lib/src/: bag.rs  constants.rs  cursor.rs  error.rs  lib.rs  meta.rs
crates/rosbags/src/: config.rs  main.rs
crates/rosbags_lib/: Cargo.toml
crates/rosbags_lib/src/: bag.rs  bag_msg_iterator.rs  constants.rs  cursor.rs  iterators.rs  lib.rs  meta.rs
crates/rosbags_lib/src/records/: bag_header.rs  chunk.rs  chunk_info.rs  connection.rs  index_data.rs  message_data.rs  record.rs
crates/rustbag/src/: bag.rs  bag_msg_iterator.rs  lib.rs
crates/rustbag_bin/: Cargo.toml
crates/rustbag_bin/src/: config.rs  main.rs
docs/: getting_started.md  index.md  license.md  performance.md  roadmap.md
v0.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.1/getting_started/: index.html
v0.1/license/: index.html
v0.1/reference/SUMMARY/: index.html
v0.1/reference/rustbag/: index.html
v0.1/reference/rustbag/rustbag/: index.html
v0.1/search/: search_index.json
