[package]
name = "rosbags-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/rosbags",
    "crates/rosbags_lib"
]

[[bin]]
name = "rosbags"
path = "crates/rosbags/src/main.rs"

[lib]
name = "rosbags_lib"
path = "crates/rosbags_lib/src/lib.rs"

[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
bytes = "1.5.0"
clap = { version = "4.4.14", features = ["derive"] }
object_store = { version = "0.9.0", features = ["aws"] }
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
