[package]
name = "rosbags-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/rosbags",
    "crates/rosbags-lib"
]

[[bin]]
name = "rosbags"
path = "crates/rosbags/src/main.rs"


[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
