[package]
name = "rosbags_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-stream = "0.3.5"
byteorder = "1.5.0"
bytes = "1.5.0"
bzip2 = "0.4.4"
futures = "0.3.30"
lz4_flex = "0.11.2"
object_store = { version = "0.9.0", features = ["aws"] }
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
