[package]
name = "rustbag_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
rustbag = { path = "../rustbag/"}
anyhow = "1.0.79"
indicatif = "0.17.7"
object_store = "0.9.0"
